@@ -1,5 +1,5 @@
 /*
-   Copyright 2020, 2022-2024 WeAreFrank!, 2018-2019 Nationale-Nederlanden
+   Copyright 2020, 2022-2025 WeAreFrank!, 2018-2019 Nationale-Nederlanden
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -94,6 +94,9 @@ public class MetadataExtractor {
 			if (metadataName.equals("path")) {
 				return "Path";
 			}
+			if (metadataName.equals("fullpath")) {
+				return "Full path";
+			}
 			if (metadataName.equals("correlationId")) {
 				return "Correlation Id";
 			}
@@ -148,6 +151,9 @@ public class MetadataExtractor {
 			}
 			if (metadataName.equals("path")) {
 				return "Path";
+			}
+			if (metadataName.equals("fullpath")) {
+				return "FullPath";
 			}
 			if (metadataName.equals("correlationId")) {
 				return "CorrelationId";
@@ -207,23 +213,26 @@ public class MetadataExtractor {
 		if (metadataName.equals("path")) {
 			return report.getPath();
 		}
+		if (metadataName.equals("fullpath")) {
+			return report.getFullPath();
+		}
 		if (metadataName.equals("correlationId")) {
 			return report.getCorrelationId();
 		}
 		if (metadataName.equals("startTime")) {
-			return new Long(report.getStartTime());
+			return Long.valueOf(report.getStartTime());
 		}
 		if (metadataName.equals("endTime")) {
-			return new Long(report.getEndTime());
+			return Long.valueOf(report.getEndTime());
 		}
 		if (metadataName.equals("estimatedMemoryUsage")) {
-			return new Long(report.getEstimatedMemoryUsage());
+			return Long.valueOf(report.getEstimatedMemoryUsage());
 		}
 		if (metadataName.equals("numberOfCheckpoints")) {
-			return new Integer(report.getNumberOfCheckpoints());
+			return Integer.valueOf(report.getNumberOfCheckpoints());
 		}
 		if (metadataName.equals("duration")) {
-			return new Long(report.getEndTime() - report.getStartTime());
+			return Long.valueOf(report.getEndTime() - report.getStartTime());
 		}
 		if (metadataName.equals("variableCsv")) {
 			return report.getVariableCsv();
@@ -246,7 +255,11 @@ public class MetadataExtractor {
 	}
 
 	public String fromObjectToString(String metadataName, Object metadataValue) {
-		return "" + metadataValue;
+		if (metadataValue == null) {
+			return null;
+		} else {
+			return metadataValue.toString();
+		}
 	}
 
 	public Object fromObjectToGUI(String metadataName, Object metadataValue) {
@@ -269,22 +282,22 @@ public class MetadataExtractor {
 
 	public Object fromStringtoObject(String metadataName, String metadataValue) {
 		if (metadataName.equals("storageId")) {
-			return new Integer(metadataValue);
+			return Integer.valueOf(metadataValue);
 		}
 		if (metadataName.equals("storageSize")) {
-			return new Long(metadataValue);
+			return Long.valueOf(metadataValue);
 		}
 		if (metadataName.equals("startTime")) {
-			return new Long(metadataValue);
+			return Long.valueOf(metadataValue);
 		}
 		if (metadataName.equals("endTime")) {
-			return new Long(metadataValue);
+			return Long.valueOf(metadataValue);
 		}
 		if (metadataName.equals("estimatedMemoryUsage")) {
-			return new Long(metadataValue);
+			return Long.valueOf(metadataValue);
 		}
 		if (metadataName.equals("numberOfCheckpoints")) {
-			return new Integer(metadataValue);
+			return Integer.valueOf(metadataValue);
 		}
 		return metadataValue;
 	}
